{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "1159dcd5-ed82-4826-adba-5fd31193425c",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "Button",
                    "id": "57be2572-6bd0-427e-829f-f9b99ed534e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPos",
                    "type": "PassThrough",
                    "id": "3a5a818e-8eee-461d-99b1-8a529c89930f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4ef37472-7382-4de9-a7e4-9f0c34ada10d",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5e71d0c-7725-439c-90d4-214e101c432c",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}